--- a/Restaurantly/assets/css/style.css
+++ b/Restaurantly/assets/css/style.css
@@ -758,7 +758,7 @@ section {
 # About
 --------------------------------------------------------------*/
 .about {
-  background: url("../img/about-bg.jpg") center center;
+  background: url("../img/old_house_about_bg.jpg") center center;
   background-size: cover;
   position: relative;
   padding: 80px 0;
@@ -1063,7 +1063,7 @@ section {
 # Events
 --------------------------------------------------------------*/
 .events {
-  background: url(../img/events-bg.jpg) center center no-repeat;
+  background: url(../img/old_house_events_bg.jpg) center center no-repeat;
   background-size: cover;
   position: relative;
 }
