--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -424,7 +424,7 @@
                       possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-2.png" alt="" class="img-fluid">
+                    <img src="{{ url_for('static', filename='assets/img/specials-2.png') }}" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -438,7 +438,7 @@
                       possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-3.png" alt="" class="img-fluid">
+                    <img src="{{ url_for('static', filename='assets/img/specials-3.png') }}" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -452,7 +452,7 @@
                       possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-4.png" alt="" class="img-fluid">
+                    <img src="{{ url_for('static', filename='assets/img/specials-4.png') }}" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
@@ -466,7 +466,7 @@
                       possible.</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2">
-                    <img src="assets/img/specials-5.png" alt="" class="img-fluid">
+                    <img src="{{ url_for('static', filename='assets/img/specials-5.png') }}" alt="" class="img-fluid">
                   </div>
                 </div>
               </div>
