testimanial img path update

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -492,7 +492,7 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/event-birthday.jpg" class="img-fluid" alt="">
+                  <img src="{{ url_for('static', filename='assets/img/event-birthday.jpg') }}" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Birthday Parties</h3>
@@ -523,7 +523,7 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/old_house_3.jpg" class="img-fluid" alt="">
+                  <img src="{{ url_for('static', filename='assets/img/old_house_3.jpg') }}" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Private Parties</h3>
@@ -553,7 +553,7 @@
             <div class="swiper-slide">
               <div class="row event-item">
                 <div class="col-lg-6">
-                  <img src="assets/img/old_house_11.jpg" class="img-fluid" alt="">
+                  <img src="{{ url_for('static', filename='assets/img/old_house_11.jpg') }}" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-6 pt-4 pt-lg-0 content">
                   <h3>Custom Parties</h3>
@@ -610,7 +610,8 @@
                   recommend.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonial_1.jpg" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/testimonials/testimonial_1.jpg') }}"
+                  class="testimonial-img" alt="">
                 <h3>Emer McKeever</h3>
                 <h4>Visitor</h4>
               </div>
@@ -623,7 +624,8 @@
                   Very good service (+nice bartender)! Good food! Nice athmosphare!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonial_2.jpg" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/testimonials/testimonial_2.jpg') }}"
+                  class="testimonial-img" alt="">
                 <h3>Matthias Hortner</h3>
                 <h4>Local Guide</h4>
               </div>
@@ -640,7 +642,8 @@
                   helpful and made feel welcome 😊😊😊
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonial_3.jpg" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/testimonials/testimonial_3.jpg') }}"
+                  class="testimonial-img" alt="">
                 <h3>Kelvin Young</h3>
                 <h4>Visitor</h4>
               </div>
@@ -653,7 +656,8 @@
                   Loved the place, very friendly owner and staff🥰 Gorgeous food, highly recommended ❤
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonial_4.jpg" class="testimonial-img" alt="">
+                <img src="{{ url_for('static', filename='assets/img/testimonials/testimonial_4.jpg') }}"
+                  class="testimonial-img" alt="">
                 <h3>Rodica Vasiloi</h3>
                 <h4>Visitor</h4>
               </div>
