--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -688,64 +688,80 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_1.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_1.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_1.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_1.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_2.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_2.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_2.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_2.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_3.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_3.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_3.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_3.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_4.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_4.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_4.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_4.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_5.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_5.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_5.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_5.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_6.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_6.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_6.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_6.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_8.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_8.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_8.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_8.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/old_house_10.jpg" class="gallery-lightbox" data-gall="gallery-item">
-                <img src="assets/img/gallery/old_house_10.jpg" alt="" class="img-fluid">
+              <a href="{{ url_for('static', filename='assets/img/gallery/old_house_10.jpg') }}" class="gallery-lightbox"
+                data-gall="gallery-item">
+                <img src="{{ url_for('static', filename='assets/img/gallery/old_house_10.jpg') }}" alt=""
+                  class="img-fluid">
               </a>
             </div>
           </div>
