cheff img path update

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -784,7 +784,8 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="100">
-              <img src="assets/img/chefs/anonymous-avatar.jpg" class="img-fluid" alt="">
+              <img src="{{ url_for('static', filename='assets/img/chefs/anonymous-avatar.jpg') }}" class="img-fluid"
+                alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Name Surname</h4>
@@ -802,7 +803,8 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="200">
-              <img src="assets/img/chefs/anonymous-avatar.jpg" class="img-fluid" alt="">
+              <img src="{{ url_for('static', filename='assets/img/chefs/anonymous-avatar.jpg') }}" class="img-fluid"
+                alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Name Surname</h4>
@@ -820,7 +822,8 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="member" data-aos="zoom-in" data-aos-delay="300">
-              <img src="assets/img/chefs/anonymous-avatar.jpg" class="img-fluid" alt="">
+              <img src="{{ url_for('static', filename='assets/img/chefs/anonymous-avatar.jpg') }}" class="img-fluid"
+                alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Name Surname</h4>
