footer link to linkedin

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -1010,7 +1010,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://www.linkedin.com/in/paul-dzvonyk/" target="blank">Paul Dzvonyk</a>
       </div>
     </div>
   </footer><!-- End Footer -->
