modified contact details

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -72,7 +72,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="#book-a-table" class="book-a-table-btn scrollto d-none d-lg-flex">Take Away</a>
+      <a class="book-a-table-btn scrollto d-none d-lg-flex" href="#contact">Contact Us</a>
 
     </div>
   </header><!-- End Header -->
@@ -795,7 +795,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>23 Main St, Arklow, Co. Wicklow, Y14 FH30</p>
+                <p>31 Main St, Arklow, Co. Wicklow, Y14 FH30</p>
               </div>
 
               <div class="open-hours">
@@ -803,7 +803,7 @@
                 <h4>Open Hours:</h4>
                 <p>
                   Monday-Sunday:<br>
-                  12:30 AM - 23:00 PM
+                  12:30 - 23:00 PM
                 </p>
               </div>
 
@@ -867,7 +867,7 @@
             <div class="footer-info">
               <h3>The Old House</h3>
               <p>
-                23 Main St, Arklow <br>
+                31 Main St, Arklow <br>
                 Co. Wicklow, Y14 FH30<br><br>
                 <strong>Phone:</strong> (0402) 32250<br>
                 <strong>Email:</strong> info@theoldhouse.com<br>
