--- a/The_Old_House/static/assets/css/style.css
+++ b/The_Old_House/static/assets/css/style.css
@@ -456,7 +456,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/old_house_bg.jpg") top center;
+  background: url("../img/hero_bg.jpg") top center;
   background-size: cover;
   position: relative;
   padding: 0;
