--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -121,7 +121,7 @@
               <li><i class="bi bi-check-circle"></i> Parking Available, Free off-street parking, Television, Highchairs
                 Available, Wheelchair Accessible.</li>
               <li><i class="bi bi-check-circle"></i> We Serve Alcohol, Full Bar, Wine and Beer.</li>
-              <li><i class="bi bi-check-circle"></i> Have no cash? - No Worry, We Will Gladly Accept Your Credit Card
+              <li><i class="bi bi-check-circle"></i>z Have no cash? - No Worry, We Will Gladly Accept Your Credit Card
                 Payments.</li>
             </ul>
             <p>
@@ -203,6 +203,8 @@
 
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
+          <!-- ======= Menu Starters Section ======= -->
+
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/soup-of-the-day.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
@@ -243,6 +245,10 @@
               (contains: 1,3,8,10,13)
             </div>
           </div>
+
+          <!-- End Menu Starters Section -->
+
+          <!--  ======= Menu Main Section ======= -->
 
           <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/lasagna.jpg') }}" class="menu-img" alt="">
@@ -293,6 +299,10 @@
             </div>
           </div>
 
+          <!-- End Menu Main Section -->
+
+          <!-- ======= Menu Oriental Section ======= -->
+
           <div class="col-lg-6 menu-item filter-oriental">
             <img src="{{ url_for('static', filename='assets/img/menu/chicken-curry.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
@@ -342,6 +352,10 @@
             </div>
           </div>
 
+          <!-- End Menu Oriental Section -->
+
+          <!-- ======= Menu Specialty Section ======= -->
+
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="{{ url_for('static', filename='assets/img/menu/fillet-steak.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
@@ -362,6 +376,8 @@
               Served with mash and veg or chips (contains: 3,6,7,10)
             </div>
           </div>
+
+          <!-- End Menu Specialty Section -->
 
         </div>
 
