soup + prawn rolls update

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -206,7 +206,8 @@
           <!-- ======= Menu Starters Section ======= -->
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="{{ url_for('static', filename='assets/img/menu/soup-of-the-day.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/soup-of-the-day.jpg') }}" class="menu-img"
+              alt="">
             <div class="menu-content">
               <a href="#">Home Made Soup Of The Day</a><span>€6.50</span>
             </div>
@@ -216,7 +217,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="{{ url_for('static', filename='assets/img/menu/filo-king-prawn.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/crispi-king-prawn-roll.jpg') }}"
+              class="menu-img" alt="">
             <div class="menu-content">
               <a href="#">Crispy King Prawn Roll</a><span>€11.95</span>
             </div>
