--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -228,6 +228,29 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
+            <img
+              src="{{ url_for('static', filename='assets/img/menu/starters/dry-salt-chilli-crispy-shredded-chicken.jpg') }}"
+              class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Dry Salt Chilli Crispy Shredded Chicken</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              (contains: 4,6,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/homemade-bbq-baby-back-ribs.jpeg') }}"
+              class="menu-img" alt="">
+            <div class="menu-content">
+              <a href="#">Homemade BBQ Baby Back Ribs</a><span>€12.95</span>
+            </div>
+            <div class="menu-ingredients">
+              BBQ pork ribs served with salad garnish (contains: C,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/spicy-chicken-wings.jpg') }}" class="menu-img"
               alt="">
             <div class="menu-content">
