eliminated menu href attribute

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -207,9 +207,9 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/starters/soup-of-the-day.jpg') }}" class="menu-img"
-              alt="">
+              alt="soup of the day">
             <div class="menu-content">
-              <a href="#">Home Made Soup Of The Day</a><span>€6.50</span>
+              <a>Home Made Soup Of The Day</a><span>€6.50</span>
             </div>
             <div class="menu-ingredients">
               See notice board or ask server for details (contains: V,C,6,7,9)
@@ -251,8 +251,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="{{ url_for('static', filename='assets/img/menu/spicy-chicken-wings.jpg') }}" class="menu-img"
-              alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/crispy-spicy-chicken-wings.jpg') }}"
+              class="menu-img" alt="crispy spicy chicken wings">
             <div class="menu-content">
               <a href="#">Crispy Spicy Chicken Wings</a><span>€11.95</span>
             </div>
