--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -207,7 +207,7 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/starters/soup-of-the-day.jpg') }}" class="menu-img"
-              alt="soup of the day">
+              alt="Home Made Soup Of The Day">
             <div class="menu-content">
               <a>Home Made Soup Of The Day</a><span>€6.50</span>
             </div>
@@ -218,9 +218,9 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/starters/crispi-king-prawn-roll.jpg') }}"
-              class="menu-img" alt="">
+              class="menu-img" alt="Crispy King Prawn Roll">
             <div class="menu-content">
-              <a href="#">Crispy King Prawn Roll</a><span>€11.95</span>
+              <a>Crispy King Prawn Roll</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
               Tiger Prawns in Filo Pastry served with salad garnish and sweet chilli dips. (contains: 1,2,6,11)
@@ -230,9 +230,9 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img
               src="{{ url_for('static', filename='assets/img/menu/starters/dry-salt-chilli-crispy-shredded-chicken.jpg') }}"
-              class="menu-img" alt="">
+              class="menu-img" alt="Dry Salt Chilli Crispy Shredded Chicken">
             <div class="menu-content">
-              <a href="#">Dry Salt Chilli Crispy Shredded Chicken</a><span>€11.95</span>
+              <a>Dry Salt Chilli Crispy Shredded Chicken</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
               (contains: 4,6,11)
@@ -241,9 +241,9 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/starters/homemade-bbq-baby-back-ribs.jpeg') }}"
-              class="menu-img" alt="">
+              class="menu-img" alt="Homemade BBQ Baby Back Ribs">
             <div class="menu-content">
-              <a href="#">Homemade BBQ Baby Back Ribs</a><span>€12.95</span>
+              <a>Homemade BBQ Baby Back Ribs</a><span>€12.95</span>
             </div>
             <div class="menu-ingredients">
               BBQ pork ribs served with salad garnish (contains: C,12)
@@ -252,9 +252,9 @@
 
           <div class="col-lg-6 menu-item filter-starters">
             <img src="{{ url_for('static', filename='assets/img/menu/starters/crispy-spicy-chicken-wings.jpg') }}"
-              class="menu-img" alt="crispy spicy chicken wings">
+              class="menu-img" alt="Crispy Spicy Chicken Wings">
             <div class="menu-content">
-              <a href="#">Crispy Spicy Chicken Wings</a><span>€11.95</span>
+              <a>Crispy Spicy Chicken Wings</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
               (contains: 4,7,11)
@@ -262,12 +262,35 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="{{ url_for('static', filename='assets/img/menu/caesar-salad.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/dry-salt-chilli-chicken-wings.jpg') }}"
+              class="menu-img" alt="Dry Salt Chilli Chicken Wings">
             <div class="menu-content">
-              <a href="#">Old House Caesar Salad</a><span>€11.95</span>
+              <a>Dry Salt Chilli Chicken Wings</a><span>€11.95</span>
             </div>
             <div class="menu-ingredients">
-              (contains: 1,3,8,10,13)
+              (contains: 4,7,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/pan-fry-bbq-chicken-wings.jpg') }}"
+              class="menu-img" alt="Pan Fry BBQ Chicken Wings">
+            <div class="menu-content">
+              <a>Pan Fry BBQ Chicken Wings</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              (contains: 4,7,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/hot-spicy-sauce-chicken-wings.jpeg') }}"
+              class="menu-img" alt="Hot Spicy Sauce Chicken Wings">
+            <div class="menu-content">
+              <a>Hot Spicy Sauce Chicken Wings</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              (contains: 4,7,11)
             </div>
           </div>
 
@@ -278,7 +301,7 @@
           <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/lasagna.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Home Made Beef Lasagna</a><span>€15.95
+              <a>Home Made Beef Lasagna</a><span>€15.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -290,7 +313,7 @@
           <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/bbq-ribs.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Full BBQ Baby Back Ribs</a><span>€18.95
+              <a>Full BBQ Baby Back Ribs</a><span>€18.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -302,7 +325,7 @@
           <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/8oz-sirloinsteak.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">8oz Sirloin Steak</a><span>€24.95
+              <a>8oz Sirloin Steak</a><span>€24.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -314,7 +337,7 @@
           <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/cod-and-chips.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Fresh Batter Cod and Chips</a><span>€17.95
+              <a>Fresh Batter Cod and Chips</a><span>€17.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -331,7 +354,7 @@
           <div class="col-lg-6 menu-item filter-oriental">
             <img src="{{ url_for('static', filename='assets/img/menu/chicken-curry.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Chicken Curry</a><span>€15.95
+              <a>Chicken Curry</a><span>€15.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -343,7 +366,7 @@
           <div class="col-lg-6 menu-item filter-oriental">
             <img src="{{ url_for('static', filename='assets/img/menu/prawn-noodles.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Stir Fried Prawn Noodles</a><span>€18.95
+              <a>Stir Fried Prawn Noodles</a><span>€18.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -356,7 +379,7 @@
             <img src="{{ url_for('static', filename='assets/img/menu/thai-crispy-chicken.jpg') }}" class="menu-img"
               alt="">
             <div class="menu-content">
-              <a href="#">Thai Sweet Chilli Crispy Shredded Chicken</a><span>€15.95
+              <a>Thai Sweet Chilli Crispy Shredded Chicken</a><span>€15.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -368,7 +391,7 @@
           <div class="col-lg-6 menu-item filter-oriental">
             <img src="{{ url_for('static', filename='assets/img/menu/roasted-duck.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crispy Roast Duck</a><span>€19.95
+              <a>Crispy Roast Duck</a><span>€19.95
               </span>
             </div>
             <div class="menu-ingredients">
@@ -384,7 +407,7 @@
           <div class="col-lg-6 menu-item filter-specialty">
             <img src="{{ url_for('static', filename='assets/img/menu/fillet-steak.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Fillet Steak</a><span>$30.95</span>
+              <a>Fillet Steak</a><span>$30.95</span>
             </div>
             <div class="menu-ingredients">
               Served with sauteed onions and mushrooms, chips and pepper sauce (contains: 1,6)
@@ -395,7 +418,7 @@
             <img src="{{ url_for('static', filename='assets/img/menu/lemon-grilled-cod.jpg') }}" class="menu-img"
               alt="">
             <div class="menu-content">
-              <a href="#">Grilled Cod with Lemony Prawn</a><span>$30.95</span>
+              <a>Grilled Cod with Lemony Prawn</a><span>$30.95</span>
             </div>
             <div class="menu-ingredients">
               Served with mash and veg or chips (contains: 3,6,7,10)
