--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -294,6 +294,29 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/homemade-ham-spring-roll.jpg') }}"
+              class="menu-img" alt="Homemade Ham Spring Roll">
+            <div class="menu-content">
+              <a>Homemade Ham Spring Roll</a><span>€8.50</span>
+            </div>
+            <div class="menu-ingredients">
+              Served with sweet chilli dips and salad garnish (contains: 1,4,6)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img
+              src="{{ url_for('static', filename='assets/img/menu/starters/garlic-bread-with-mozzarella-cheese-and-pesto.jpg') }}"
+              class="menu-img" alt="Garlic Bread with Mozzarella Cheese and Pesto">
+            <div class="menu-content">
+              <a>Garlic Bread with Mozzarella Cheese and Pesto</a><span>€8.50</span>
+            </div>
+            <div class="menu-ingredients">
+              Served with salad garnish (contains: 1,7,8,11,13)
+            </div>
+          </div>
+
           <!-- End Menu Starters Section -->
 
           <!--  ======= Menu Main Section ======= -->
