--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -317,6 +317,40 @@
             </div>
           </div>
 
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/breaded-garlic-mushrooms.jpeg') }}"
+              class="menu-img" alt="Breaded Garlic Muhrooms">
+            <div class="menu-content">
+              <a>Breaded Garlic Muhrooms</a><span>€8.50</span>
+            </div>
+            <div class="menu-ingredients">
+              Golden fried fresh mushrooms with garlic breadcrumbs and garlic mayo dips (contains: 1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/lemony-prawn-bruschetta.jpg') }}"
+              class="menu-img" alt="Lemony Prawn Bruschetta">
+            <div class="menu-content">
+              <a>Lemony Prawn Bruschetta</a><span>€13.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Toast garlic bread with lemon garlic butter chilli prawns and rocket garnish (contains: 1,3,4,6,7,13)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-starters">
+            <img src="{{ url_for('static', filename='assets/img/menu/starters/the-old-house-caesar-salad.jpg') }}"
+              class="menu-img" alt="The Old House Caesar Salad">
+            <div class="menu-content">
+              <a>The Old House Caesar Salad</a><span>€11.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Romaine lettuce with cashew Nuts, croutons, crispy bacon, parmesan cheese and dressing. Add Grilled Gajun
+              Chicken for only €4 (contains: 1,3,8,10,13)
+            </div>
+          </div>
+
           <!-- End Menu Starters Section -->
 
           <!--  ======= Menu Main Section ======= -->
