main course section

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -356,6 +356,46 @@
           <!--  ======= Menu Main Section ======= -->
 
           <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/chef-special-of-the-day.jpg') }}"
+              class="menu-img" alt="Chef Special Of The Day">
+            <div class="menu-content">
+              <a>Chef Special Of The Day</a><span>€15.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Deep fried chicken with spicy tomato sauce and pesto, with mozzarella cheese on top. Served with chips and
+              salad (contains: 4,7,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img
+              src="{{ url_for('static', filename='assets/img/menu/main_course/chicken-mushroom-and-ham-vol-au-vents.jpeg') }}"
+              class="menu-img" alt="Chicken Mushroom and Ham Vol-Au-Vents">
+            <div class="menu-content">
+              <a>Chicken Mushroom and Ham Vol-Au-Vents</a><span>€15.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Made with chicken, mushrooms, ham, onion and creamy white sauce. Served with chips and salad (contains:
+              1,4,6,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/roast-joint-of-the-day.jpg') }}"
+              class="menu-img" alt="Roast Joint Of The Day">
+            <div class="menu-content">
+              <a>Roast Joint Of The Day</a><span>€16.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Roast sirloin beef or stuffing turckey and ham or roas lamb leg. Served with mash, veg and gravy. (gravy
+              contains: 1,6,12) (mash and veg contains: 7) (stuffing contains: 1,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
             <img src="{{ url_for('static', filename='assets/img/menu/lasagna.jpg') }}" class="menu-img" alt="">
             <div class="menu-content">
               <a>Home Made Beef Lasagna</a><span>€15.95
