--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -390,13 +390,14 @@
               </span>
             </div>
             <div class="menu-ingredients">
-              Roast sirloin beef or stuffing turckey and ham or roas lamb leg. Served with mash, veg and gravy. (gravy
+              Roast sirloin beef or stuffing turckey and ham or roast lamb leg. Served with mash, veg and gravy. (gravy
               contains: 1,6,12) (mash and veg contains: 7) (stuffing contains: 1,7)
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-main">
-            <img src="{{ url_for('static', filename='assets/img/menu/lasagna.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/lasagna.jpg') }}" class="menu-img"
+              alt="Home Made Beef Lasagna">
             <div class="menu-content">
               <a>Home Made Beef Lasagna</a><span>€15.95
               </span>
@@ -404,6 +405,33 @@
             <div class="menu-ingredients">
               Prime minced beef and layers of lasagna pasta in a Bolognese sauce served with garlic bread and chips
               (contains: 1,4,7,9,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/crispy_fried_chicken_tender.jpg') }}"
+              class="menu-img" alt="Crispy Fried Chicken Tender">
+            <div class="menu-content">
+              <a>Crispy Fried Chicken Tender</a><span>€14.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Pressed in breadcrumbs and served with garlic or BBQ sauce and chips
+              (contains: 1,4,6,10,11)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/cod-and-chips.jpg') }}"
+              class="menu-img" alt="Fresh Batter Cod and Chips">
+            <div class="menu-content">
+              <a>Fresh Batter Cod and Chips</a><span>€17.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Traditional fillet of Atlantic Cod fried golden brown in a Harp Lager Beer Batter, fresh chips, malt
+              vibegar and tartare compote
+              (contains: 1,4,6,10)
             </div>
           </div>
 
@@ -428,19 +456,6 @@
             <div class="menu-ingredients">
               8oz Sirloin Steak served with sauteed onion mushroom and pepper sauce and fresh chips
               (contains: 1,4,6,7,12)
-            </div>
-          </div>
-
-          <div class="col-lg-6 menu-item filter-main">
-            <img src="{{ url_for('static', filename='assets/img/menu/cod-and-chips.jpg') }}" class="menu-img" alt="">
-            <div class="menu-content">
-              <a>Fresh Batter Cod and Chips</a><span>€17.95
-              </span>
-            </div>
-            <div class="menu-ingredients">
-              Traditional fillet of Atlantic Cod fried golden brown in a Harp Lager Beer Batter, fresh chips, malt
-              vibegar and tartare compote
-              (contains: 1,4,6,10)
             </div>
           </div>
 
