completed main dishes

--- a/The_Old_House/templates/index.html
+++ b/The_Old_House/templates/index.html
@@ -436,7 +436,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-main">
-            <img src="{{ url_for('static', filename='assets/img/menu/bbq-ribs.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/bbq-ribs.jpg') }}" class="menu-img"
+              alt="Full BBQ Baby Back Ribs">
             <div class="menu-content">
               <a>Full BBQ Baby Back Ribs</a><span>€18.95
               </span>
@@ -448,7 +449,8 @@
           </div>
 
           <div class="col-lg-6 menu-item filter-main">
-            <img src="{{ url_for('static', filename='assets/img/menu/8oz-sirloinsteak.jpg') }}" class="menu-img" alt="">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/8oz-sirloinsteak.jpg') }}"
+              class="menu-img" alt="8oz Sirloin Steak">
             <div class="menu-content">
               <a>8oz Sirloin Steak</a><span>€24.95
               </span>
@@ -456,6 +458,47 @@
             <div class="menu-ingredients">
               8oz Sirloin Steak served with sauteed onion mushroom and pepper sauce and fresh chips
               (contains: 1,4,6,7,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/vegeterian-pasta.jpg') }}"
+              class="menu-img" alt="Vegeterian Pasta">
+            <div class="menu-content">
+              <a>Vegeterian Pasta</a><span>€13.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Pasta penne with mixed vegetables, white sauce and toast garlic bread
+              (contains: 1,4,7)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/pasta-carbonara.jpg') }}"
+              class="menu-img" alt="Pasta Carbonara">
+            <div class="menu-content">
+              <a>Pasta Carbonara</a><span>€15.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Pasta penne in white wine cream sauce with bacon, chicken, white onions and mushrooms, served with toasted
+              garlic bread
+              (contains: 1,4,7,12)
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-main">
+            <img src="{{ url_for('static', filename='assets/img/menu/main_course/tiger-prawns-pasta.jpg') }}"
+              class="menu-img" alt="Tiger Prawns Pasta">
+            <div class="menu-content">
+              <a>Tiger Prawns Pasta</a><span>€18.95
+              </span>
+            </div>
+            <div class="menu-ingredients">
+              Pasta penne in white wine cream sauce with tiger prawns, white onions and mushrooms, served with toasted
+              garlic bread
+              (contains: 1,4,7,12)
             </div>
           </div>
 
